    - res/i18n/x2goclient_fi.ts: fixup translation by respecting the original
      messages' format and other changes.
    - src/{ongetpass,onmainwindow}.cpp: fixup QPlastiqueStyle usage on Qt5.
      This particular style has been removed/replaced by Fusion, which
      incorporates features of both Plastique and Clearlooks styles.
    - x2goclient.spec: whitespace only.

  [ Mike DePaulo ]
  * New upstream release (4.0.5.2):
    - Windows: add sshd logging when using the --debug flag.

  [ Martti Pitkänen ]
  * New upstream version (4.0.5.2):
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.
    - res/i18n/x2goclient_fi.ts: update Finnish translation file.


  [ Sébastien Ducoulombier ]
  * New upstream version (4.0.5.2):
    - misc {src/,x2goclient.pro}: port to Qt5.

 -- X2Go Release Manager <git-admin@x2go.org>  Thu, 24 Mar 2016 23:04:42 +0100

x2goclient (4.0.5.1-0x2go1) unstable; urgency=low

  [ Mihai Moldovan ]
  * New upstream release (4.0.5.1):
    - onmainwindow.cpp: include sshd PID file path option in quotes to support
      whitespaces within the var directory path on Windows. Add comment to
      revisit this later on non-Windows-platforms, too. Fixes: #916.
    - onmainwindow.cpp: do NOT reformat. Reverts most of the previous commit
      because it breaks code logic.
    - res/txt/packs: add adaptive method.
    - {macbuild.sh,x2goclient.pro}: pass MacPorts library and include path's
      to qmake. Due to the qt4-mac's changes, we do not automatically get
      these values automatically "appended" in a usable way anymore.
    - x2gosettings.cpp: let centralSettings () return false on Windows.
    - onmainwindow.cpp: be more precise in slotScDaemonError () regarding
      unknown and undefined errors.
    - onmainwindow.{cpp,h}: don't use a hardcoded path to xmodmap on OS X and
      handle errors more gracefully. Fixes: #487.
    - x2goclient.pro: fix typo --stdlib=... -> -stdlib=... Fixes: #973.