@@ -14,6 +14,10 @@ x2goclient (4.0.5.2-0x2go1) UNRELEASED; urgency=medium
       This particular style has been removed/replaced by Fusion, which
       incorporates features of both Plastique and Clearlooks styles.
     - x2goclient.spec: whitespace only.
+    - src/onmainwindow.cpp: add (default) MacPorts prefix, /usr/local/bin and
+      /opt/X11/bin to x2goclient's environment and child environments before
+      starting xmodmap. Fixes: #1019. Requires a re-release of X2Go Client for
+      OS X.
 
   [ Mike DePaulo ]
   * New upstream release (4.0.5.2):
